[package]
name = "poem-reverse-proxy"
version = "0.0.0"
authors = ["Joey <josephameadows@gmail.com>"]
edition = "2021"
rust-version = "1.65.0"
description = "A simple proxy endpoint compatible with the Poem web framework"
license = "MIT"
keywords = ["poem", "http", "proxy", "web", "async"]
readme = "README.md"
repository = "https://github.com/Parrhesia-Base/poem-proxy"
categories = ["network-programming", "web-programming", "web-programming::http-server", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures-util = "0.3.30"
http = "1.1.0"
httparse = "1.8.0"
poem = { version = "3", features = ['websocket'] }
reqwest = "0.12.3"
tokio = "1.37.0"
tokio-tungstenite = "0.21.0"
